--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Pacifico&display=swap');
 
+/* font-family: 'Pacifico', cursive; */
 
 body {
   margin: 0;
