--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,22 @@
     padding: 0;
 }
 
-
 #md-search-nav{
     display: none;
 }
 
+
+
 @media (min-width: 768px) {
+    
+    #md-search-nav{
+        display: flex;
+    }
+}
+@media (min-width: 1024px) {
+    .nav-links{
+        width: 100%;
+    }
     #md-search-nav{
         display: flex;
     }
