--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,15 @@ body {
     overflow-y: scroll;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(92, 92, 92, 0.5);
+    border-radius: 4px;
+}
 
 #md-search-nav {
     display: none;
