--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,15 @@ body {
     -webkit-animation: likeAnimation 0.8s ease-in-out;
 }
 
+.truncate-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: pre-wrap;
+}
+
 @keyframes likeAnimation {
     0% {
         transform: scale(1);
